--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p>Use short words. Short words are more powerful and less pretentious. <em>Stop</em> is stronger than <em>discontinue</em>.
   <p>The demo highlights words by syllable count. Short words are green. Longer words go through orange to red.
   <p>Stay in the green.
-  <p>Source: Gary Provost’s tip, ‘Use Short Words,’ from ‘100 Ways to Improvde Your Writing.’
+  <p>Source: Gary Provost’s tip, ‘Use Short Words,’ from ‘100 Ways to Improve Your Writing.’
 </aside>
 <div id="root"></div>
 <p class="credits"><a href="https://github.com/wooorm/short-words">short-words</a> • visualise lengthy words • <a href="https://github.com/wooorm">@wooorm</a>.</p>
