--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<meta charset="utf8">
+<meta charset=utf8>
 <title>short-words</title>
-<meta property="og:title" content="short-words">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="description" content="Visualise lengthy words">
-<meta property="og:description" content="Visualise lengthy words">
-<meta property="og:image" content="https://raw.githubusercontent.com/wooorm/short-words/src/screenshot.png">
-<link rel="stylesheet" href="index.css">
+<meta property=og:title content=short-words>
+<meta name=viewport content=width=device-width,initial-scale=1>
+<meta name=description content="Visualise lengthy words">
+<meta property=og:description content="Visualise lengthy words">
+<meta property=og:image content=https://raw.githubusercontent.com/wooorm/short-words/src/screenshot.png>
+<link rel=stylesheet href=index.css>
 <main></main>
 <template>Finally, after a couple more false klaxons, the bus started, and Robert Cohn waved good-by to us, and all the Basques waved good-by to him. As soon as we started out on the road outside of town it was cool. It felt nice riding high up and close under the trees. The bus went quite fast and made a good breeze, and as we went out along the road with the dust powdering the trees and down the hill, we had a fine view, back through the trees, of the town rising up from the bluff above the river. The Basque lying against by knees pointed out the view with the neck of a wine-bottle, and winked at us. He nodded his head.
 
 - The Sun Also Rises (Hemingway)</template>
-<script src="index.js"></script>
+<script type=module src=index.module.js></script>
+<script nomodule src=index.nomodule.js></script>
