--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <meta charset=utf8>
 <title>short-words</title>
-<meta property=og:title content=short-words>
-<meta name=viewport content=width=device-width,initial-scale=1>
-<meta name=description content="Visualise lengthy words">
-<meta property=og:description content="Visualise lengthy words">
-<meta property=og:image content=https://raw.githubusercontent.com/wooorm/short-words/main/screenshot.png>
-<link rel=stylesheet href=index.css>
+<meta content=short-words property=og:title>
+<meta content=initial-scale=1,width=device-width name=viewport>
+<meta content="Visualise lengthy words" name=description>
+<meta content="Visualise lengthy words" property=og:description>
+<meta content=https://raw.githubusercontent.com/wooorm/short-words/main/screenshot.png property=og:image>
+<link href=index.css rel=stylesheet>
 <main></main>
 <template>Finally, after a couple more false klaxons, the bus started, and Robert Cohn waved good-by to us, and all the Basques waved good-by to him. As soon as we started out on the road outside of town it was cool. It felt nice riding high up and close under the trees. The bus went quite fast and made a good breeze, and as we went out along the road with the dust powdering the trees and down the hill, we had a fine view, back through the trees, of the town rising up from the bluff above the river. The Basque lying against by knees pointed out the view with the neck of a wine-bottle, and winked at us. He nodded his head.
 
 - The Sun Also Rises (Hemingway)</template>
-<script type=module src=index.module.js></script>
+<script src=index.module.js type=module></script>
 <script nomodule src=index.nomodule.js></script>
